@@ -1,3 +1,13 @@
+2009-07-02  Erik Arvidsson  <arv@chromium.org>
+
+        Reviewed by Adam Roben.
+
+        [Win] HTML5 Drag and drop, dragend is not fired when pressing Esc
+        https://bugs.webkit.org/show_bug.cgi?id=26699
+
+        * WebDropSource.cpp:
+        (WebDropSource::QueryContinueDrag):
+
 2009-07-02  Oliver Hunt  <oliver@apple.com>
 
         Reviewed by Anders Carlsson.
