@@ -1,3 +1,14 @@
+2009-07-02  Erik Arvidsson  <arv@chromium.org>
+
+        Reviewed by Adam Roben.
+
+        [Win] HTML5 Drag and drop, dragend is not fired when pressing Esc
+        https://bugs.webkit.org/show_bug.cgi?id=26699
+
+        * manual-tests/drag-escape.html: Added.
+        * page/EventHandler.cpp:
+        (WebCore::EventHandler::dragSourceEndedAt):
+
 2009-07-02  Pierre d'Herbemont  <pdherbemont@apple.com>
 
         Fix the Gtk build after r45474. The localized strings should
